<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/title_app"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        tools:layout_editor_absoluteX="17dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_login"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        tools:layout_editor_absoluteX="3dp" />

    <TextView
        android:id="@+id/txt_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/txt_notification"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btn_vietnamese"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_vn"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_notification" />

    <Button
        android:id="@+id/btn_english"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_us"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btn_vietnamese"
        app:layout_constraintTop_toBottomOf="@+id/txt_notification" />

    <Button
        android:id="@+id/btn_french"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_fr"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btn_english"
        app:layout_constraintTop_toBottomOf="@+id/txt_notification" />

</androidx.constraintlayout.widget.ConstraintLayout>